fix: remove page break on section
adding page breack caused some issue on pdf export

--- a/src/sadeh-html.css
+++ b/src/sadeh-html.css
@@ -59,7 +59,6 @@ header {
 
 section {
   margin-top: 1em;
-  page-break-before: always;
 }
 
 li {
@@ -87,6 +86,7 @@ tbody td {
 
 tbody td.keywords {
   font-size: 0.9em;
+  font-style: "italic";
 }
 
 #contact {
