--- a/src/sadeh-pdf.css
+++ b/src/sadeh-pdf.css
@@ -59,7 +59,6 @@ header {
 
 section {
   margin-top: 1em;
-  page-break-before: always;
 }
 
 li {
@@ -86,8 +85,8 @@ tbody td {
 }
 
 tbody td.keywords {
-  font-style: italic;
   font-size: 0.9em;
+  font-style: "italic";
 }
 
 #contact {
